--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,17 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 apply from:"${project.rootDir}/common_config.gradle"
 
 android {
     compileSdkVersion project.ext.compileSdkVersion
     buildToolsVersion project.ext.buildToolsVersion
+
+    dataBinding{
+        enabled = true
+    }
 
     defaultConfig {
         applicationId "react.freddy.com.ubid"
@@ -62,5 +67,8 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-android-processor:2.16"
 
+    //animation for android
     implementation 'com.airbnb.android:lottie:3.4.1'
+    //log for android
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
