--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,11 @@ android {
     compileSdkVersion project.ext.compileSdkVersion
     buildToolsVersion project.ext.buildToolsVersion
 
-    dataBinding{
-        enabled = true
+    buildFeatures{
+        dataBinding = true
+        // for view binding :
+        // viewBinding = true
     }
-
     defaultConfig {
         applicationId "react.freddy.com.ubid"
         minSdkVersion project.ext.minSdkVersion
@@ -75,6 +76,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit-mock:2.3.0'
+    //http logging
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     //room
     implementation 'androidx.room:room-runtime:2.2.3'
     kapt 'androidx.room:room-compiler:2.2.3'
